# ProjectZomboidModManager

./: .gitignore  .gitmessage.txt  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pt-BR.md  index.html  package-lock.json  package.json  project.md
.github/workflows/: pr-tests.yml  virustotal.yml
scripts/: run-tauri-command.mjs
src/: App.tsx  global.css  index.html  main.js  main.tsx  style.css
src-tauri/: Cargo.toml  linux-helper.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: app.yml
src-tauri/src/: command_runner.rs  game.rs  helper_main.rs  i18n.rs  main.rs  models.rs  mods.rs  remote.rs  server_launch.rs  server_test.rs  servers.rs  settings.rs  util.rs  workshop.rs
src-tauri/src/game/: installation.rs  paths.rs  performance.rs  system.rs
src-tauri/src/mods/: cache.rs  catalog.rs  discovery.rs  install.rs  metadata.rs  server_values.rs
src-tauri/src/server_test/: batch.rs  logs.rs  ports.rs  preflight.rs  process.rs  runner.rs
src-tauri/src/workshop/: api.rs  download.rs  navigation.rs
src/components/: AppHeader.tsx  AppSidebar.tsx  AppSidebarItem.tsx  CreateServerModal.tsx  Dashboard.tsx  DownloadMods.tsx  DownloadProgressCard.tsx  LoadingModsPanel.tsx  Logo.tsx  MissingDependencyModal.tsx  ModsList.tsx  RemoteSteamCmdModal.tsx  RemoteTerminalModal.tsx  ServerConfigurationModal.tsx  ServerDetail.tsx  ServerTestPanel.tsx  Settings.tsx  WorkshopWindow.tsx  WorkspaceSelector.tsx
src/hooks/: useModsLibrary.ts  useWorkshopDownloadManager.ts
src/i18n/: index.ts  resources.ts
src/lib/: commandRunner.ts  errors.ts  modBuilds.ts  modDependencies.ts  modImages.ts  modsCache.ts  serverMods.ts  serverTest.ts  serversCache.ts  tauri.ts
src/types/: download.ts  mod.ts  server.ts  serverTest.ts  (+1 more)
(+19 files in other folders)
