[package]
name = "zomboid_server_mod_manager"
version = "0.2.0"
edition = "2021"
description = "Desktop mod manager for Project Zomboid servers"
authors = ["Wiliam Melo"]

[package.metadata.tauri-winres]
OriginalFilename = "zomboid_server_mod_manager.exe"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rust-i18n = "4"
