[package]
name = "zomboid_server_mod_manager"
version = "0.3.0"
edition = "2021"
description = "Desktop mod manager for Project Zomboid servers"
authors = ["Wiliam Melo"]

[package.metadata.tauri-winres]
OriginalFilename = "zomboid_server_mod_manager.exe"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-i18n = "4"
