[package]
name = "zomboid_server_mod_manager"
version = "0.4.0"
edition = "2021"
default-run = "zomboid_server_mod_manager"
description = "Desktop mod manager for Project Zomboid servers"
authors = ["Wiliam Melo"]

[package.metadata.tauri-winres]
OriginalFilename = "zomboid_server_mod_manager.exe"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rust-i18n = "4"

[[bin]]
name = "zomboid_server_mod_manager"
path = "src/main.rs"

[[bin]]
name = "pzmm-helper"
path = "src/helper_main.rs"
